--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 </head>
 <body>
 <div class="myGrid">
-    <div>Элемент 1</div>
+    <div><img src="https://source.unsplash.com/OyCl7Y4y0Bk" alt=""></div>
     <div>Элемент 2</div>
     <div>Элемент 3</div>
-    <div>Элемент 4</div>
-    <div>Элемент 5</div>
+    <div><img src="https://source.unsplash.com/Kl1gC0ve620" alt=""></div>
+    <div>fake love</div>
     <div>Элемент 6</div>
-    <div>Элемент 7</div>
-    <div>Элемент 8</div>
-    <div>Элемент 9</div>
-    <div>Элемент 10</div>
+    <div>я люблю тебя до пизды но себя все таки больше
+        если судьба значит все норм будет
+        если нет, ну и нет тогда
+        пока просто отпускаю эту ситуацию
+        пусть будет как будет</div>
+    <div class="myArea"><img src="https://source.unsplash.com/v1OW17UcR-Q" alt=""></div>
+    <div><img src="https://source.unsplash.com/Wpg3Qm0zaGk" alt=""></div>
+    <div class="header"><img src="https://source.unsplash.com/rBRZLPVLQg0" alt=""></div>
 </div>
 </body>
 </html>
