--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <div>Элемент 2</div>
     <div>Элемент 3</div>
     <div><img src="https://source.unsplash.com/Kl1gC0ve620" alt=""></div>
-    <div>fake love</div>
+    <div>God made it rain, the devil made it hail
+        Dropped out of school, but I'm that one at Yale
+        Made the best tracks and still went off the rail
+        Had to go down, down, down, this the new town, town, town</div>
     <div>Элемент 6</div>
-    <div>я люблю тебя до пизды но себя все таки больше
-        если судьба значит все норм будет
-        если нет, ну и нет тогда
-        пока просто отпускаю эту ситуацию
-        пусть будет как будет</div>
+    <div>See this in 3D, all lights out for me
+        All lights out for me, lightning strikes the beach
+        Eighty degrees, warm it up for me
+        Finally free, found the God in me
+        And I want you to see, I can walk on water
+        Thousand miles from shore, I can float on the water
+        Father, hold me close, don't let me drown
+        I know You won't</div>
     <div class="myArea"><img src="https://source.unsplash.com/v1OW17UcR-Q" alt=""></div>
     <div><img src="https://source.unsplash.com/Wpg3Qm0zaGk" alt=""></div>
     <div class="header"><img src="https://source.unsplash.com/rBRZLPVLQg0" alt=""></div>
